test/spec_vectors/simd_i8x16_cmp/fail/module_17.wat
(module (func $i8x16.lt_s-arg-empty (result v128) (i8x16.lt_s)))